apps/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
containers:
  - name: nginx
    image: wmateusz1212/my-k8s-app:latest  # <--- ZMIANA TUTAJ
    imagePullPolicy: Always  # <--- WAŻNE: Zmusza K8s do pobierania nowej wersji "latest"
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
